--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "rc-pagination": "^1.17.13",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.8",
+    "react-daum-postcode": "^2.0.0-next.3",
     "react-dom": "^16.8.6",
     "react-redux": "^7.0.2",
     "react-router": "^5.0.0",
