--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "prop-types": "^15.7.2",
     "rc-pagination": "^1.17.13",
     "react": "^16.8.6",
+    "react-alert": "^5.4.0",
+    "react-alert-template-basic": "^1.0.0",
     "react-bootstrap": "^1.0.0-beta.8",
     "react-daum-postcode": "^2.0.0-next.3",
     "react-dom": "^16.8.6",
