--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-bootstrap": "^1.0.0-beta.8",
     "react-daum-postcode": "^2.0.0-next.3",
     "react-dom": "^16.8.6",
+    "react-icons": "^3.6.1",
     "react-redux": "^7.0.2",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
