--- a/package.json
+++ b/package.json
@@ -46,10 +46,15 @@
   ],
   "devDependencies": {
     "css-loader": "^2.1.1",
+    "eslint-plugin-react-hooks": "^1.6.0",
     "node-sass": "^4.11.0",
     "npm-watch": "^0.6.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "webpack-cli": "^3.3.0"
+  },
+  "rules": {
+    "react-hooks/rules-of-hooks": "error",
+    "react-hooks/exhaustive-deps": "warn"
   }
 }
