--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-daum-postcode": "^2.0.0-next.3",
     "react-dom": "^16.8.6",
     "react-icons": "^3.6.1",
+    "react-infinite-scroller": "^1.2.4",
     "react-redux": "^7.0.2",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
