--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
     "classnames": "^2.2.6",
+    "express": "^4.17.0",
     "formik": "^1.5.4",
     "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
