멘토링 채팅 UI 개발

--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "react-alert": "^5.4.0",
     "react-alert-template-basic": "^1.0.0",
     "react-bootstrap": "^1.0.0-beta.8",
+    "react-chat-elements": "^10.5.0",
     "react-daum-postcode": "^2.0.0-next.3",
     "react-dom": "^16.8.6",
     "react-icons": "^3.6.1",
     "react-infinite-scroll-component": "^4.5.2",
+    "react-native-vector-icons": "^6.5.0",
     "react-redux": "^7.0.2",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
