--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^16.8.6",
     "react-alert": "^5.4.0",
     "react-alert-template-basic": "^1.0.0",
+    "react-app-polyfill": "^1.0.1",
     "react-bootstrap": "^1.0.0-beta.8",
     "react-chat-elements": "^10.5.0",
     "react-daum-postcode": "^2.0.0-next.3",
