--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express": "^4.17.0",
     "formik": "^1.5.4",
     "node-sass": "^4.12.0",
+    "promise-polyfill": "8.1.3",
     "prop-types": "^15.7.2",
     "rc-pagination": "^1.17.13",
     "react": "^16.8.6",
