--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/polyfill": "^7.4.4",
     "axios": "^0.18.0",
+    "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.3.1",
     "classnames": "^2.2.6",
+    "core-js": "^3.1.4",
     "express": "^4.17.0",
     "formik": "^1.5.4",
     "node-sass": "^4.12.0",
