--- a/package.json
+++ b/package.json
@@ -3,16 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@babel/polyfill": "^7.4.4",
     "axios": "^0.18.0",
-    "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.3.1",
     "classnames": "^2.2.6",
-    "core-js": "^3.1.4",
+    "es6-promise": "^4.2.8",
     "express": "^4.17.0",
     "formik": "^1.5.4",
+    "isomorphic-fetch": "^2.2.1",
     "node-sass": "^4.12.0",
-    "promise-polyfill": "8.1.3",
     "prop-types": "^15.7.2",
     "rc-pagination": "^1.17.13",
     "react": "^16.8.6",
@@ -55,6 +53,8 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "babel-plugin-transform-async-to-generator": "^6.24.1",
+    "babel-polyfill": "^6.26.0",
     "css-loader": "^2.1.1",
     "eslint-plugin-react-hooks": "^1.6.0",
     "npm-watch": "^0.6.0",
