--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-daum-postcode": "^2.0.0-next.3",
     "react-device-detect": "^1.6.2",
     "react-dom": "^16.8.6",
+    "react-ga": "^2.6.0",
     "react-icons": "^3.6.1",
     "react-infinite-scroll-component": "^4.5.2",
     "react-native-vector-icons": "^6.5.0",
